# he-wiktionary-parser

./: .gitignore  README.md  parse.py  pyproject.toml  requirements.txt
