[tool.poetry]
name = "hebrew_wiktionary_parser"
version = "0.1.0"
description = ""
authors = ["twyair <yairt16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
wikitextparser = "0.45.2"
cattrs = "^22.2.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
